fix font size and spacing for exp page, fix index page

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,9 @@ h1, h4, h5 {
     padding: 0;
 }
 
+p {
+    font-size: 90%;
+}
 
 .highlight {
     color: #00ADB5;
@@ -68,7 +71,7 @@ h1, h4, h5 {
 
 .scrollable {
     height: 300px;
-    width: 500px;
+    width: 450px;
     overflow-y: auto;
     border: 3px solid #00ADB5;
     padding-left: 10px;
